# IC

./: README.md
Lab_1/bit_stream/: README
Lab_1/bit_stream/src/: CMakeLists.txt  wav_quant_dec.cpp
Lab_1/sndfile-example/: Makefile  analyze_codec.sh  lossyEncSample  results.csv  results_sample01.csv  results_sample01Mono.csv  summary_sample01.txt  summary_sample01Mono.txt
Lab_1/sndfile-example/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  collect_data.cpp  plot_histograms.py  wav_cmp.cpp  wav_dct_dec.cpp  wav_dct_enc.cpp  wav_effects.cpp  wav_hist.cpp  wav_hist.h  wav_mono.cpp  wav_quant.cpp  wav_quant.h
bit_stream/src/: CMakeLists.txt  collect_data.cpp  wav_quant_enc.cpp
